ghc-4335c07/testsuite/tests/indexed-types/should_compile/T3418.hs
{-# LANGUAGE TypeFamilies, DatatypeContexts #-}
module T3418 where

newtype (a ~ b) => S a b = S { unS :: a }
