ghc-4335c07/testsuite/tests/indexed-types/should_fail/T13092c/T13092c_4.hs
{-# LANGUAGE TypeFamilies #-}

module T13092c_4 where

import T13092c_3

type instance F (a, Char) = String
